<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MovieDex</string>
    <string name="splash_screen">Splash Screen MovieDex</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie">Movie</string>
    <string name="show">TV Show</string>
    <string name="favorite">Favorite</string>
    <string name="about">About</string>

    <string name="profile_name">Konik Saputra</string>
    <string name="profile_address">Tangerang Selatan, INA</string>
    <string name="profile_label_email">Email</string>
    <string name="profile_name_email">koniksaputra@live.com</string>
    <string name="profile_label_instagram">Instagram</string>
    <string name="profile_name_instagram">instagram.com/koniksaputra</string>
    <string name="profile_label_twitter">Twitter</string>
    <string name="profile_name_twitter">twitter.com/koniksaputra</string>
    <string name="profile_label_facebook">Facebook</string>
    <string name="profile_name_facebook">facebook.com/koniksaputra</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_about">About</string>
    <string name="title_movie">Movie</string>
    <string name="title_show">TV Show</string>
    <string name="share_button">Share</string>
    <string name="popularity">Popularity</string>
    <string name="overview">Overview</string>
    <string name="img_poster">Image Poster</string>
    <string name="no_data">Empty data</string>
    <string name="something_wrong">Oops.. something went wrong\nCheck your connection</string>

    <string name="item_title"> %1$s (%2$s)</string>
</resources>