<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_movie">

    <fragment
        android:id="@+id/navigation_movie"
        android:name="com.nicktra.moviedex.ui.movies.MoviesFragment"
        android:label="@string/title_movie"
        tools:layout="@layout/fragment_movies" />

    <fragment
        android:id="@+id/navigation_show"
        android:name="com.nicktra.moviedex.ui.shows.ShowsFragment"
        android:label="@string/title_show"
        tools:layout="@layout/fragment_movies" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.nicktra.moviedex.favorite.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/navigation_about"
        android:name="com.nicktra.moviedex.ui.about.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />
</navigation>