<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <ImageView
        android:id="@+id/backdrop_detail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:scaleType="centerCrop"
        android:src="@color/darkGrey"
        app:layout_constraintDimensionRatio="H,1.5:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <Space
        android:id="@+id/space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/backdrop_detail"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.cardview.widget.CardView
        android:id="@+id/poster_detail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:src="@color/white"
        app:cardCornerRadius="16dp"
        app:layout_constraintDimensionRatio="H,1.5:2"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space"
        tools:ignore="ContentDescription">

        <ImageView
            android:id="@+id/iv_poster_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_data_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:ellipsize="end"
        android:maxWidth="0dp"
        android:maxLines="3"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/btn_favorite"
        app:layout_constraintStart_toEndOf="@+id/poster_detail"
        app:layout_constraintTop_toBottomOf="@+id/backdrop_detail"
        tools:text="Title Movie" />

    <TextView
        android:id="@+id/tv_data_release"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/tv_data_title"
        app:layout_constraintStart_toStartOf="@+id/tv_data_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_data_title"
        tools:text="99/99/9999" />

    <TextView
        android:id="@+id/tv_data_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawablePadding="4dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="?android:attr/textColorPrimary"
        app:drawableStartCompat="@drawable/ic_star"
        app:layout_constraintStart_toStartOf="@+id/tv_data_release"
        app:layout_constraintTop_toBottomOf="@+id/tv_data_release"
        tools:text="7.7" />

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/circle"
        android:foregroundGravity="center_vertical"
        android:padding="7dp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,RtlSymmetry" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/purple_secondary"
        app:tint="@color/red_primary"
        android:src="@drawable/ic_favorite_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/poster_detail"
        tools:ignore="ContentDescription" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/purple_secondary"
        android:text="@string/share_button"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="ContentDescription" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/poster_detail">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_item_popularity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:textColor="?android:attr/textColorPrimary"
                android:text="@string/popularity"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_data_popularity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:textAlignment="textStart"
                android:textColor="?android:attr/textColorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_popularity"
                tools:text="@tools:sample/us_zipcodes" />


            <TextView
                android:id="@+id/tv_item_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:textColor="?android:attr/textColorPrimary"
                android:text="@string/overview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_data_popularity" />

            <TextView
                android:id="@+id/tv_data_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:paddingBottom="70dp"
                android:textAlignment="textStart"
                android:textColor="?android:attr/textColorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_overview"
                tools:maxLines="5"
                tools:text="@tools:sample/lorem/random" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>